<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dcf.iqunxing.message2</groupId>
	<artifactId>message-service-parent</artifactId>
	<version>1.0.8.RELEASE</version>
	<packaging>pom</packaging>

	<!-- 子模块 -->
	<modules>
		<module>../message-api-dao</module>
		<module>../message-api-impl</module>
		<module>../message-service</module>
		<module>../message-job</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- message版本号 -->
		<message.version>1.0.8.RELEASE</message.version>
		<message-api.version>1.0.8.RELEASE</message-api.version>
		<!-- 其他依赖版本版本号 -->
		<iqunxing-framework.version>1.0.1.RELEASE</iqunxing-framework.version>
		<dashcam.version>1.0.1.RELEASE</dashcam.version>
		<mockito.version>1.10.19</mockito.version>
		<powermock.version>1.6.2</powermock.version>
		<h2.version>1.4.187</h2.version>
		<lang.version>2.6</lang.version>
		<collections.version>3.2.1 </collections.version>
		<support.version>3.2.13.RELEASE </support.version>
		<mail.version>1.4.7</mail.version>
		<databind.version>2.2.2</databind.version>
		<core.version>2.2.2</core.version>
		<commonslang3.version>3.1</commonslang3.version>
		<xinge.version>1.1.6</xinge.version>
		<fk.version>1.0.1.RELEASE</fk.version>
		<user.version>1.0.2.RELEASE</user.version>
		<dnsjava.version>2.1.7</dnsjava.version>
		<javax.servlet.version>3.0.1</javax.servlet.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.dcf.iqunxing.framework</groupId>
				<artifactId>iqunxing-framework</artifactId>
				<version>${iqunxing-framework.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.message2</groupId>
				<artifactId>message-api</artifactId>
				<version>${message-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.message2</groupId>
				<artifactId>message-api-hessian</artifactId>
				<version>${message-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.message2</groupId>
				<artifactId>message-api-impl</artifactId>
				<version>${message.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.message2</groupId>
				<artifactId>message-api-dao</artifactId>
				<version>${message.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.fx</groupId>
				<artifactId>iqunxing-fx-dashcam-agent</artifactId>
				<version>${dashcam.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>log4j</artifactId>
						<groupId>log4j</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${javax.servlet.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${lang.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${collections.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${support.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>${mail.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${core.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${databind.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commonslang3.version}</version>
			</dependency>

			<dependency>
				<groupId>com.tencent</groupId>
				<artifactId>com.tencent.xinge</artifactId>
				<version> ${xinge.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.framework</groupId>
				<artifactId>framework-infra</artifactId>
				<version>${fk.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.user</groupId>
				<artifactId>user-api-hessian</artifactId>
				<version>${user.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.user</groupId>
				<artifactId>user-api</artifactId>
				<version>${user.version}</version>
			</dependency>
			<dependency>
				<groupId>com.dcf.iqunxing.user</groupId>
				<artifactId>user-api-adapter</artifactId>
				<version>${user.version}</version>
			</dependency>
			<dependency>
				<groupId>dnsjava</groupId>
				<artifactId>dnsjava</artifactId>
				<version>${dnsjava.version}</version>
			</dependency>
			<!-- 单元测试相关 -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-module-junit4</artifactId>
				<version>${powermock.version}</version>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-api-mockito</artifactId>
				<version>${powermock.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.mockito</groupId>
						<artifactId>mockito-all</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>cobertura</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<outputDirectory>${basedir}/target/report</outputDirectory>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>report-only</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<outputDirectory>${basedir}/surefire-reports</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>release</id>
			<url>http://dev:dcf@gerrit.dcfservice.com:8083/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>snapshots</id>
			<url>http://gerrit.dcfservice.com:8083/nexus/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<name>snapshots</name>
			<url>http://gerrit.dcfservice.com:8083/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>releases</id>
			<name>release</name>
			<url>http://gerrit.dcfservice.com:8083/nexus/content/repositories/releases/</url>
		</repository>
	</distributionManagement>
	<description>项目描述</description>

</project>